<resources>
    <string name="app_name">Vocabulary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_get_data">Get Data</string>
    <string name="btn_next_word">Next Word</string>
    <string name="nav_btn_learn">Learning</string>
    <string name="nav_btn_edit">Edit</string>
    <string name="vocab_ipt_hint">Spanish</string>
    <string name="trans_ipt_hint">German</string>
    <string name="btn_vocab_snd">Push word</string>
    <string name="nav_btn_add">Add word</string>
    <string name="btn_edit_send">Update word</string>
    <string name="btn_edit">Edit word</string>
    <string name="btn_rmv_word">Remove Word</string>
    <string name="nav_btn_recap">Recap</string>
    <string name="recap_fragment_name">Recap</string>
    <string name="edit_fragment_title">Edit Word</string>
    <string name="recap_input_hint">Input translation here</string>
    <string name="recap_correct">Correct</string>
    <string name="recap_incorrect">Incorrect</string>
    <string name="btn_check_recap">Check</string>
    <string name="btn_previous_word">Previous Word</string>
    <string name="btn_start_recap">Start Recap</string>
    <string name="notification_channel_name" translatable="false">Reminder</string>
    <string name="notification_description">Recap your vocabular</string>
    <string name="CHANNEL_ID" translatable="false">RecapChannel</string>
    <string name="btn_count_correct">Count correct</string>
    <string name="btn_swap_word">Swap Fields</string>
    <string name="nav_start_recap_title">Start Recap</string>
    <string name="recap_start_title">Select the recap direction</string>
    <string name="recap_direction_both">Both</string>
    <string name="recap_direction_german_to_spanish">German to Spanish</string>
    <string name="recap_direction_spanish_to_german">Spanish to German</string>
    <string name="recap_start_word_cnt">Number of Words for Recap</string>
</resources>