<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.cloudsheeptech.vocabulary.add.AddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/vocabInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vocab_ipt_hint"
                android:inputType="text"
                android:text="@={viewModel.word}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/vocabulary_blue" />

            <EditText
                android:id="@+id/translateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trans_ipt_hint"
                android:inputType="text"
                android:text="@={viewModel.translation}" />

            <Button
                android:id="@+id/inputBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> viewModel.addNewWord()}"
                android:text="@string/btn_vocab_snd" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>